react-ui/src/App.css
:root {
  --darkcyan: #00838f;
  --lightcyan: #00edd9;
  --darkcoolgray: #37474f;
  --gray: #6e6e6e;
  --medgray: #8e8e8e;
  --lightgray: #bec2c4;
  --darkgray: #212121;
  --yellow: #fdc22d;
  --darkyellow: #e0a100;
  --purple: #6e2c66;
  --white: #d1d1d1;
  /*https://color.adobe.com/create/color-wheel/?base=0&rule=Custom&selected=4&name=My%20Color%20Theme&mode=hsv&rgbvalues=0.9921568627450981,0.7607843137254902,0.17647058823529413,1,1,1,0,0.5137254901960784,0.5607843137254902,0.43137254901960786,0.43137254901960786,0.43137254901960786,0,0.93,0.852499999999859&swatchOrder=1,2,4,0,3*/

  --ubuntu: 'Ubuntu Mono', monospace;
  --gabriela: 'Gabriela', serif;
  --lato: 'Lato', sans-serif;
  --open: 'Open Sans';
}

html,
body {
  width: 100%;
  min-width: 320px;
  height: 100%;
  margin: 0;
  padding: 0;
  /*overflow-x: hidden;*/
}

body {
  background-color: var(--med);
  line-height: 1.7em;
  color: white;
  font-family: var(--ubuntu);
  font-size: 18px;
  background: url('./images/linen.png') top left repeat, radial-gradient(circle, var(--gray), var(--darkgray));
}

h1,
h2,
h3,
h4,
h5,
h6,
label {
  color: white;
  font-family: var(--gabriela);
}

/* Change Autocomplete styles in Chrome*/
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus textarea:-webkit-autofill,
textarea:-webkit-autofill:hover textarea:-webkit-autofill:focus,
select:-webkit-autofill,
select:-webkit-autofill:hover,
select:-webkit-autofill:focus {
  /* border: 1px solid green; */
  -webkit-text-fill-color: black;
  -webkit-box-shadow: 0 0 0px 1000px #000 inset;
  transition: background-color 5000s ease-in-out 0s;
}
a:link {
  color: inherit;
  text-decoration: none;
  font-family: var(--gabriela);
}

a:visited {
  color: #e6e6e6ff;
}
a:hover {
  color: var(--yellow);
}
a:active {
  color: var(--yellow);
}

p {
  font-size: 1em;
  font-weight: 300;
  font-family: var(--lato);
}

.wrapper {
  /* The height needs to be set to a fixed value for the effect to work.
   * 100vh is the full height of the viewport. */
  height: 100vh;
  /* The scaling of the images would add a horizontal scrollbar, so disable x overflow. */
  overflow-x: hidden;
  /* Enable scrolling on the page. */
  overflow-y: auto;
  /* Set the perspective to 2px. This is essentailly the simulated distance from the viewport to transformed objects.*/
  perspective: 2px;
}

.main {
  overflow-x: auto;
  display: grid;
  grid-template-rows: repeat(5, auto);
  grid-row-gap: 2em;
  grid-template-areas:
    'header'
    'hero'
    'teacher'
    'newsletter'
    'footer';
}

header {
  background: linear-gradient(to top, rgba(243, 243, 243, 0), rgba(0, 0, 0, 0.5));
  display: grid;
  grid-area: header;
  height: 8em;
  grid-template:
    'logo' auto
    'navbar' auto;
  align-items: start;
  justify-items: center;
}

#logo {
  padding: 1em;
  margin-bottom: -3em;
  text-align: center;
  font-weight: bold;
  display: inline-block;
  grid-area: logo;
}

nav {
  grid-area: navbar;
  align-self: start;
}

nav ul {
  list-style-type: none;
  float: none;
  padding: unset;
}

ul li {
  display: inline;
  color: white;
  margin: 0 1em;
}

@media screen and (min-width: 35.5em) {
  header {
    justify-items: normal;
    grid-template: 'logo navbar' / fit-content(20%) auto;
  }
  nav ul {
    float: right;
  }
}

section {
  position: relative;
}

section#hero-section {
  min-height: 95vh;
  grid-area: hero;
  display: grid;
  grid-template: 'ladybytes' 'values' 'playground';
  grid-gap: 3em;
  margin-top: 5em;
}

section#hero-section #ladybytes {
  font-family: var(--ubuntu); /*font-family: var(--lato); */
  align-self: center;
  margin-top: 1em;
  margin-bottom: 0;
  width: 100%;
  text-align: center;
  grid-area: ladybytes;
}

section#hero-section #ladybytes span.ladybytes {
  font-size: 6em;
  font-family: var(--ubuntu);
  font-variant: small-caps;
  font-weight: 600;
  letter-spacing: -4px;
}

section#hero-section #ladybytes span.lady {
  color: var(--yellow);
}

section#hero-section #ladybytes #slogan h2 {
  text-align: center;
  font-size: 1.2em;
}

section#hero-section #values {
  grid-area: values;
  display: grid;
  grid-template: 'skill' 'donation' 'experience' auto;
  justify-items: center;
  margin-bottom: 2em;
}

section#hero-section #values #skill-value {
  grid-area: skill;
}

section#hero-section #values #experience-value {
  grid-area: experience;
}

section#hero-section #values #donation-value {
  grid-area: donation;
}

section#hero-section #values .value {
  min-height: 10em;
  width: 80%;
}

section#hero-section #values .value p {
  text-align: justify;
  text-align-last: center;
  font-size: 1.2em;
  width: 90%;
  height: 5em;
  margin: 0 auto;
  font-family: var(--lato);
}

section#hero-section #values .value .small-value {
  font-size: 0.8em;
}

section#hero-section #values .value .value-text {
  /* border: rgba(253, 194, 45, 0) solid 0.5px; */
  margin: 1em;
}

section#hero-section #values .value .value-text .value-cta {
  cursor: pointer;
  font-weight: bold;
  /* color: var(--yellow); */
}
section#hero-section #values .value .value-text .value-cta:hover {
  color: var(--yellow);
}

section#hero-section #values .value h2 {
  color: var(--yellow);
  text-align: center;
  margin-bottom: -2%;
}

section#hero-section #values .value h3 {
  text-align: center;
  font-size: 1.4em;
}

section#hero-section #values .value .value-text:hover {
  /* box-shadow: inset 0 0 1em rgba(253, 194, 45, 0.7), 0 0 1em rgba(253, 194, 45, 0.7); */
  /* border-radius: 5px; */
  /* border: rgba(253, 194, 45, 0.5) solid 0.5px; */
}

@media screen and (min-width: 0em) and (max-width: 360px) {
  section#hero-section #ladybytes span.ladybytes {
    font-size: 5em;
  }
}

@media screen and (min-width: 35.5em) {
  section#hero-section #values .value {
    width: 60%;
  }
}
/* ... */

